--- a/user/config/versions.yaml
+++ b/user/config/versions.yaml
@@ -1,6 +1,6 @@
 core:
   grav:
-    version: 1.7.46
+    version: 1.7.48
     schema: 1.7.0_2020-11-20_1
     history:
       - { version: 1.7.42.3, date: '2023-10-01 08:37:40' }
@@ -8,3 +8,4 @@ core:
       - { version: 1.7.43, date: '2023-10-07 07:15:35' }
       - { version: 1.7.45, date: '2024-04-18 02:55:40' }
       - { version: 1.7.46, date: '2024-06-04 22:42:06' }
+      - { version: 1.7.48, date: '2025-03-30 01:39:46' }
