--- a/user/config/system.yaml
+++ b/user/config/system.yaml
@@ -1,7 +1,8 @@
 absolute_urls: false
 
 home:
-  alias: '/blog/spiritually-drained'
+  alias: '/blog'
+  hide_in_urls: false 
 
 pages:
   theme: notepad
